# funscript-tools

./: .gitignore  README.md  RELEASE_NOTES.md  SETTINGS_GUIDE.md  build_macos.py  check_fungen_gui.py  check_fungen_output.py  cli.py  config.event_definitions.yml  config.json  config.py  create_dock_app.py  funscript_compare.py  main.py  processor.py  pyproject.toml  requirements.txt  version.py
analysis_samples/: compare.py  verify_sharpen.py
analysis_samples/current/: test video.funscript  test video.raw.funscript  test video.raw.roll.funscript  test video.raw.surge.funscript  test video.raw.sway.funscript  test video.roll.funscript  test video.surge.funscript  test video.sway.funscript
docs/: USER_GUIDE.md
processing/: curve_library.py  motion_axis_generation.py  multi_script_loader.py  signal_analysis.py  speed_processing.py  tcode_scheduler.py  tcode_stream.py  trochoid_spatial.py
restim_processor_core/: NOTICE.md  __init__.py  config.py  processor.py  variant_runner.py
restim_processor_core/funscript/: __init__.py  funscript.py
restim_processor_core/processing/: __init__.py  axis_markers.py  basic_transforms.py  combining.py  dynamic_range_compressor.py  event_processor.py  funscript_1d_to_2d.py  funscript_editor.py  funscript_oscillating_2d.py  funscript_prostate_2d.py  input_sharpen.py  linear_mapping.py  multi_script_loader.py  noise_gate.py  one_euro_filter.py  output_shaping.py  phase_shift_generation.py  signal_analysis.py  spatial_3d_curve.py  spatial_3d_linear.py  special_generators.py  speed_processing.py  tcode_sender.py  tcode_stream.py  traveling_wave.py  trochoid_quantization.py  trochoid_spatial.py
scripts/: profile_one_slot.py  profile_processing.py
ui/: animation_viewer.py  compare_viewer.py  conversion_tabs.py  curve_editor_dialog.py  curve_family_params.py  custom_events_builder.py  help_viewer.py  main_window.py  multi_script_viewer.py  nonblocking_info.py  parameter_tabs.py  shaft_viewer.py  signal_analyzer.py  smoothing_preview.py  tcode_preview.py  theme.py  tooltip_helper.py  trochoid_viewer.py  video_player_helper.py  vlc_video_backend.py
ui/media_source/: __init__.py  (+3 more)
